--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
   box-sizing: border-box;
 }
 
+/* GLOBAL ------------------------------------------------ */
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -34,9 +36,24 @@ button {
   }
 }
 
+input:focus,
+select:focus {
+  outline: 1px solid var(--clr-primary);
+}
+
+/* HEADER ------------------------------------------------ */
+
 header {
   padding: 0.5rem 1rem;
   background-color: var(--clr-primary);
+}
+
+.header-container {
+  /* max-width: 1200px; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  align-items: center;
 }
 
 .nav-button {
@@ -50,13 +67,16 @@ header {
 
 nav {
   font-weight: bold;
+  justify-self: end;
   & ul {
     display: flex;
     gap: 1rem;
     list-style: none;
     align-items: center;
+    & svg {
+      display: none;
+    }
   }
-  justify-self: end;
 }
 
 .search-container {
@@ -102,6 +122,8 @@ nav {
     outline: 1px solid var(--clr-primary-hover);
   }
 }
+
+/* MAIN -------------------------------------------------- */
 
 main {
   padding-inline: 1rem;
@@ -197,9 +219,6 @@ main {
       justify-content: center;
       justify-self: start;
     }
-    /* &:hover {
-      background-color: var(--clr-primary);
-    } */
   }
   &:hover {
     & .remove-button {
@@ -208,6 +227,66 @@ main {
   }
 }
 
+/* DIALOG ------------------------------------------------ */
+
+.new-book-dialog {
+  border: none;
+  border-radius: 1rem;
+  padding: 1rem;
+  background-color: white;
+  justify-self: center;
+  align-self: center;
+  width: min(20rem, 100%);
+  position: relative;
+  form {
+    margin-top: 0.5rem;
+    display: flex;
+
+    flex-direction: column;
+    gap: 0.5rem;
+    label,
+    input,
+    select {
+      display: block;
+      width: 100%;
+    }
+    label {
+      font-size: 0.8rem;
+      font-weight: bold;
+    }
+    input,
+    select {
+      border: 1px solid black;
+      border-radius: 100vw;
+      padding: 0.5rem 1rem;
+      font-size: initial;
+      margin-top: 0.2rem;
+    }
+    .close-button {
+      position: absolute;
+      right: 1rem;
+      top: 1rem;
+      & svg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+    .confirm-button {
+      background-color: var(--clr-primary);
+      border-radius: 100vw;
+      padding: 0.5rem 1rem;
+      margin-top: 0.5rem;
+      font-weight: bold;
+      &:hover {
+        background-color: var(--clr-primary-hover);
+      }
+    }
+  }
+}
+
+/* FOOTER ------------------------------------------------ */
+
 footer {
   align-self: center;
   width: 100%;
@@ -215,7 +294,6 @@ footer {
   background-color: black;
   color: white;
   padding: 1rem;
-  /* justify-self: end; */
   & a {
     font-weight: bold;
     text-decoration: underline;
@@ -223,14 +301,6 @@ footer {
 }
 
 /* UTILITY CLASSES --------------------------------------- */
-
-.header-container {
-  /* max-width: 1200px; */
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
-  align-items: center;
-}
 
 /* MEDIA QUERIES ---------------------------------------- */
 
@@ -242,7 +312,42 @@ footer {
       );
   }
   nav {
-    display: none;
+    transition: transform 0.2s ease-in-out;
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    right: 0;
+    height: 100%;
+    padding: 1rem;
+    padding-top: 4rem;
+    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.2);
+    background-color: var(--clr-primary);
+    .nav-close-button {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+    }
+    ul {
+      flex-direction: column;
+      padding-right: 2rem;
+      align-items: start;
+      & a {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+      }
+      & svg {
+        display: block;
+      }
+      & .user-container img,
+      & svg {
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+  }
+  nav[aria-expanded="false"] {
+    transform: translateX(100%);
   }
   .nav-button {
     display: flex;
@@ -252,5 +357,8 @@ footer {
     & input {
       min-width: 100%;
     }
+  }
+  main {
+    padding-top: 4rem;
   }
 }
